Wed Jul  8 19:10:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_check_type): rejects typed data.

Wed Jul  8 18:28:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c ({proc,binding,method}_data_type): typed.

Wed Jul  8 16:47:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_basename): returns new string instead of
	  shared string from FilePathStringValue().  [ruby-core:24199]

2009-07-07  Eric Hodel  <drbrain@segment7.net>

	* ext/.document:  Update with extensions that appear to have
	  documentation.  [ruby-core:24181]

Wed Jul  8 04:28:16 2009  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h:
	  rename
	    "...TypeStruct" and "typed_struct" to
	    "TypedData..." and "typeddata", respectively.
	  rename
	    rb_data_type_t#name to
	    rb_data_type_t#wrap_struct_name.

	* error.c, gc.c, iseq.c, vm.c: ditto.

Tue Jul  7 20:23:27 2009  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* bin/irb, lib/irb.rb lib/irb/*: irb-0.9.6, extend inspect-mode

Tue Jul  7 17:00:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_call_finalizer_at_exit): deal with typed struct like
	  as obj_free().

	* error.c (rb_typed_struct_is_kind_of): new function to see if the
	  given typed struct.

	* error.c (rb_check_typed_struct): new function to check typed
	  struct.

	* include/ruby/ruby.h (Check_TypedStruct, Data_Get_TypedStruct):
	  new macro to check typed struct.

Tue Jul  7 13:36:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (DEFINE_ENUMFUNCS): included function signature.

	* enum.c (rb_enum_join): non-nil separator must be convertible to
	  String.  [ruby-core:24172]

Tue Jul  7 12:47:28 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (rb_enum_join): should propagate taint to the return
	  value.  the change was overridden by r23967.  [ruby-core:24176]

Tue Jul  7 11:56:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (GC_PROF_SET_MALLOC_INFO, GC_PROF_SET_HEAP_INFO): simplified.
